--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorPrimaryLight">#B39DDB</color>
     <color name="colorAccent">#FF5252</color>
     <color name="colorAccentLight">#FF8A80</color>
+    <color name="textColor">@android:color/black</color>
+    <color name="uiTextColor">@android:color/white</color>
 </resources>
