--- a/app/src/main/res/layout/page_toolbar.xml
+++ b/app/src/main/res/layout/page_toolbar.xml
@@ -6,12 +6,14 @@
     android:background="@color/colorPrimary">
 
     <ImageView
+        android:id="@+id/chatsButton"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:src="@drawable/ic_history"
         android:layout_weight="1"/>
 
     <ImageView
+        android:id="@+id/contactsButton"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:src="@drawable/ic_contacts"
