--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="PageToolbar"></declare-styleable>
+    <declare-styleable name="BottomNavBar"></declare-styleable>
 </resources>
