--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/rounded_button"
+        android:background="@color/colorPrimary"
         android:text="@string/login"
         android:textColor="@color/uiTextColor"
         app:layout_constraintEnd_toEndOf="parent"
