--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5E35B1</color>
+    <color name="colorPrimary">#02457A</color>
+    <color name="colorPrimaryDark">#001B48</color>
+    <color name="colorPrimaryLight">#B39DDB</color>
+    <color name="colorAccent">#FF5252</color>
+    <color name="colorAccentLight">#FF8A80</color>
+
+    <color name="textColor">@android:color/black</color>
+    <color name="uiTextColor">#D5D0D2</color>
+
+    <color name="color_light_grey">#D5D0D2</color>
+    <color name="color_light_blue">#97CADB</color>
+
+    <!--<color name="colorPrimary">#5E35B1</color>
     <color name="colorPrimaryDark">#4527A0</color>
     <color name="colorPrimaryLight">#B39DDB</color>
     <color name="colorAccent">#FF5252</color>
     <color name="colorAccentLight">#FF8A80</color>
     <color name="textColor">@android:color/black</color>
-    <color name="uiTextColor">@android:color/white</color>
+    <color name="uiTextColor">@android:color/white</color>-->
 </resources>
