--- a/app/src/main/res/layout/companion_message.xml
+++ b/app/src/main/res/layout/companion_message.xml
@@ -5,7 +5,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_marginLeft="64dp"
-    android:layout_height="match_parent">
+    android:layout_marginBottom="8dp"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -19,16 +20,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации форм развития. "
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textColor="@color/textColor"
             android:layout_margin="8dp"/>
     </androidx.cardview.widget.CardView>
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/personImageView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_weight="0"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/brad_pitt"
