--- a/app/src/main/res/layout/fragment_single_chat.xml
+++ b/app/src/main/res/layout/fragment_single_chat.xml
@@ -15,6 +15,7 @@
         android:id="@+id/chatRecycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/chatToolbar"
         app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
