--- a/app/src/main/res/layout/people_item_chats.xml
+++ b/app/src/main/res/layout/people_item_chats.xml
@@ -6,10 +6,8 @@
     android:layout_width="match_parent"
     android:background="@drawable/background_selector"
     android:padding="4dp"
-    android:clickable="true"
     android:id="@+id/chatItemParent"
-    android:layout_height="wrap_content"
-    android:focusable="true">
+    android:layout_height="wrap_content">
 
 
     <com.mikhaellopez.circularimageview.CircularImageView
