--- a/app/src/main/res/layout/chat_toolbar.xml
+++ b/app/src/main/res/layout/chat_toolbar.xml
@@ -7,8 +7,9 @@
     android:layout_height="?attr/actionBarSize">
 
     <ImageButton
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:id="@+id/backButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginLeft="8dp"
         android:layout_weight="0"
         android:layout_gravity="center"
