--- a/app/src/main/res/layout/people_item_contacts.xml
+++ b/app/src/main/res/layout/people_item_contacts.xml
@@ -32,6 +32,7 @@
         android:text="Brad Pitt"
         android:textColor="@color/textColor"
         android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/personImageView"
         app:layout_constraintTop_toTopOf="@+id/personImageView" />
@@ -43,6 +44,8 @@
         android:text="Заместитель старшего инженера"
         android:textColor="@color/textColor"
         android:textSize="14sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="@+id/personImageView"
-        app:layout_constraintStart_toStartOf="@+id/nameTextView"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/nameTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
