--- a/app/src/main/res/layout/close_confirmation_dialog.xml
+++ b/app/src/main/res/layout/close_confirmation_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="250dp"
     android:layout_height="wrap_content">
 
     <TextView
@@ -35,7 +35,6 @@
         android:textColor="@color/uiTextColor"
         android:background="@color/colorPrimary"
         android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toStartOf="@+id/endDialogButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
