--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -19,9 +19,9 @@
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="@+id/searchEditText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
 
     <TextView
         android:id="@+id/textView2"
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/searchEditText"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -49,7 +49,7 @@
         android:id="@+id/searchIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_search_black_24dp"
+        app:srcCompat="@drawable/ic_search"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_marginTop="12dp"
         android:tint="@color/textColor"
@@ -57,8 +57,8 @@
 
     <ImageView
         android:id="@+id/showChatImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:background="@color/colorPrimary"
         app:layout_constraintStart_toEndOf="@+id/peopleRecycler"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
