--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/qrImageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
