--- a/app/src/main/res/layout/people_item_chats.xml
+++ b/app/src/main/res/layout/people_item_chats.xml
@@ -9,6 +9,11 @@
     android:id="@+id/chatItemParent"
     android:layout_height="wrap_content">
 
+    <Button
+        android:id="@+id/invisibleButton"
+        android:background="@null"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/personImageView"
