--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -16,7 +16,24 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/showChatImageView"
         app:layout_constraintTop_toBottomOf="@+id/callUpperBar"
         app:srcCompat="@drawable/brad_pitt" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chatRecycler"
+        android:layout_width="175dp"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/callUpperBar" />
+    <ImageView
+        android:id="@+id/showChatImageView"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintStart_toEndOf="@+id/chatRecycler"
+        app:layout_constraintTop_toBottomOf="@+id/callUpperBar"
+        app:srcCompat="@drawable/ic_keyboard_arrow_left_black" />
 </androidx.constraintlayout.widget.ConstraintLayout>
