--- a/app/src/main/res/layout/owner_message.xml
+++ b/app/src/main/res/layout/owner_message.xml
@@ -26,6 +26,7 @@
         android:layout_marginLeft="8dp"
         android:background="@color/color_light_blue">
         <TextView
+            android:id="@+id/messageTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="С другой стороны рамки и место обучения кадров требуют от нас анализа
