--- a/app/src/main/res/layout/companion_message_pdf.xml
+++ b/app/src/main/res/layout/companion_message_pdf.xml
@@ -21,6 +21,7 @@
             android:layout_height="60dp">
 
             <TextView
+                android:id="@+id/fileTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -31,6 +32,7 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/fileSizeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -41,7 +43,7 @@
                 android:textSize="12sp" />
 
             <ImageView
-                android:layout_width="55dp"
+                android:layout_width="35dp"
                 android:layout_height="55dp"
                 android:src="@drawable/pdf"
                 android:layout_alignParentLeft="true"
