--- a/app/src/main/res/layout/companion_message_pdf.xml
+++ b/app/src/main/res/layout/companion_message_pdf.xml
@@ -9,6 +9,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/fileMessageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -17,6 +18,7 @@
         android:background="@color/color_light_blue"
         android:layout_weight="1">
         <RelativeLayout
+            android:clickable="false"
             android:layout_width="wrap_content"
             android:layout_height="60dp">
 
@@ -26,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:text="jvk1166z.esp"
+                android:clickable="false"
                 android:textColor="@color/textColor"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
@@ -37,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:text="13.37 MB"
+                android:clickable="false"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:textColor="@color/textColor"
@@ -46,6 +50,7 @@
                 android:layout_width="35dp"
                 android:layout_height="55dp"
                 android:src="@drawable/pdf"
+                android:clickable="false"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
         </RelativeLayout>
