--- a/app/src/main/res/layout/people_item_contacts.xml
+++ b/app/src/main/res/layout/people_item_contacts.xml
@@ -18,6 +18,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:civ_border_width="0dp"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:text="Brad Pitt"
+        android:clickable="false"
         android:textColor="@color/textColor"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +46,7 @@
         android:text="Заместитель старшего инженера"
         android:textColor="@color/textColor"
         android:textSize="14sp"
+        android:clickable="false"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="@+id/personImageView"
         app:layout_constraintEnd_toEndOf="parent"
