--- a/app/src/main/res/layout/call_upper_bar.xml
+++ b/app/src/main/res/layout/call_upper_bar.xml
@@ -35,7 +35,7 @@
         android:id="@+id/callLength"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="06:12"
+        android:text="--:--"
         android:textColor="@color/uiTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
