--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -35,4 +35,16 @@
         app:layout_constraintStart_toEndOf="@+id/chatRecycler"
         app:layout_constraintTop_toBottomOf="@+id/callUpperBar"
         app:srcCompat="@drawable/ic_keyboard_arrow_left_black" />
+    <TextView
+        android:id="@+id/emptyChatTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/chat_is_empty"
+        android:visibility="gone"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="@id/chatRecycler"
+        app:layout_constraintEnd_toEndOf="@id/chatRecycler"
+        app:layout_constraintTop_toTopOf="@id/chatRecycler"
+        app:layout_constraintBottom_toBottomOf="@id/chatRecycler"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
