tiny design improvements

--- a/app/src/main/res/layout/call_upper_bar.xml
+++ b/app/src/main/res/layout/call_upper_bar.xml
@@ -42,4 +42,15 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/companionName"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/indicatorImageView"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:src="@drawable/red_indicator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/callLength"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
