--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -74,4 +74,11 @@
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:srcCompat="@drawable/businessman" />
+    <View
+        android:layout_width="2dp"
+        android:background="@color/colorPrimary"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/showChatImageView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
