--- a/app/src/main/res/layout/people_item_chats.xml
+++ b/app/src/main/res/layout/people_item_chats.xml
@@ -34,13 +34,16 @@
 
     <TextView
         android:id="@+id/nameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:text="Brad Pitt"
         android:clickable="false"
         app:layout_constraintHorizontal_bias="0.0"
         android:textColor="@color/textColor"
+        android:ellipsize="end"
+        android:maxEms="12"
+        android:maxLines="1"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/chatDateTextView"
         app:layout_constraintStart_toEndOf="@+id/personImageView"
